removed unused package references

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,24 +1,7 @@
 {
     "packageDirectories": [
-        {
-            "path": "sfdx-source",
-            "package": "fflib-apex-common",
-            "versionName": "ver 0.1",
-            "versionNumber": "0.1.0.NEXT",
-            "default": true,
-            "dependencies": [
-                {
-                    "package": "04t1T000000RcxwQAC"
-                }
-            ]
-        }
+        { "path": "sfdx-source", "default": true }
     ],
-    "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "48.0",
-    "packageAliases": {
-        "fflib-apex-common": "0Ho1T000000PAtuSAG",
-        "fflib-apex-common@0.1.0-1": "04t1T000000RcvqQAC",
-        "fflib-apex-common@0.1.0-2": "04t1T000000Rcy1QAC"
-    }
+    "sourceApiVersion": "48.0"
 }
